--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+.posts{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  gap: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.container{
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #eee;
 }
 
-.App-link {
-  color: #61dafb;
+.post{
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0,0,0,.1);
+  text-align: center;
+  transition: transform 100ms ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post:hover {
+  transform: scale(1.03);
+}
+.post-content{
+  padding: 30px;
+}
+
+.photo{
+  max-width: 100px;
+  margin-top: 20px;
+  max-height: 250px;
+  border-radius: 300px;
+  box-shadow: 0 0 10px rgba(255, 0, 0, 0.1);
+}
+
+h2{
+  text-align: center;
 }
