--- a/src/templates/Home/styles.css
+++ b/src/templates/Home/styles.css
@@ -1,37 +1,13 @@
-.posts{
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  gap: 30px;
-  padding: 30px;
+.container {
+    min-height: 1200px;
+    background-color: #eee;
+    min-height: 100vh;
+    padding: 30px;
+    margin: 0 auto;
 }
 
-.container{
-  min-height: 100vh;
-  background-color: #eee;
-}
-
-.post{
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0,0,0,.1);
-  text-align: center;
-  transition: transform 100ms ease-in-out;
-}
-
-.post:hover {
-  transform: scale(1.03);
-}
-.post-content{
-  padding: 30px;
-}
-
-.photo{
-  max-width: 100px;
-  margin-top: 20px;
-  max-height: 250px;
-  border-radius: 300px;
-  box-shadow: 0 0 10px rgba(255, 0, 0, 0.1);
-}
-
-h2{
-  text-align: center;
+.button-container {
+    min-height: 100px;
+    display: flex;
+    align-items: flex-end;
 }
