--- a/src/components/PostCard/styles.css
+++ b/src/components/PostCard/styles.css
@@ -1,5 +1,5 @@
 .post {
-    background-color: #fff;
+    background-color: #F8F8F2;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     text-align: center;
     transition: transform 100ms ease-in-out;
